--- a/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/java/org/kie/workbench/common/stunner/client/widgets/canvas/actions/TextEditorInLineBox.html
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/java/org/kie/workbench/common/stunner/client/widgets/canvas/actions/TextEditorInLineBox.html
@@ -1,5 +1,5 @@
 <div data-field="editNameBox" tabindex="-1" class="inlineEditNameBox">
-    <div type="text" contenteditable="true" class="inlineNameEditBoxNameBox" data-field="nameField"></div>
+    <div type="text" contenteditable="true" class="inlineNameEditBoxNameBox" data-field="nameField" data-text="Enter text here"></div>
     <i data-field="saveButton"></i>
     <i data-field="closeButton"></i>
 </div>
