--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/documentation/links/NameAndUrlPopoverViewImpl.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/documentation/links/NameAndUrlPopoverViewImpl.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<div data-field="popover" data-placement="top" data-toggle="popover" data-trigger="manual" data-container="#popover-container" title="" data-close="true" xmlns="http://www.w3.org/1999/html">
+<div data-field="popover" data-placement="top" data-toggle="popover" data-trigger="manual" data-container="#popover-container" data-close="true">
     <div id="popover-container"></div>
     <div id="popover-content">
         <div class="kie-dmn-name-and-url-type-container">
