--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/documentation/links/NameAndUrlPopoverViewImpl.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/documentation/links/NameAndUrlPopoverViewImpl.html
@@ -24,10 +24,10 @@
                 <br/>
                 <label for="kieUrl"><span data-field="urlLabel"></span></label>
                 <input id="urlInput" class="form-control pf-c-form-control" type="text" aria-label="URL text input" id="kieUrl">
-                <span class="attachment-tip">.pdf, .doc, .jpeg, .xls</span>
+                <span id="attachmentTip" class="attachment-tip"></span>
                 <div class="buttons-container">
-                    <button id="okButton" class="btn btn-sm btn-primary" data-placement="bottom">OK</button>
-                    <button id="cancelButton" class="btn btn-sm btn-default" data-placement="bottom">Cancel</button>
+                    <button id="okButton" class="btn btn-sm btn-primary" data-placement="bottom"></button>
+                    <button id="cancelButton" class="btn btn-sm btn-default" data-placement="bottom"></button>
                 </div>
             </div>
         </div>
