bugfix after review

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/notificationsEditor/widget/NotificationEditorWidgetViewImpl.html
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/notificationsEditor/widget/NotificationEditorWidgetViewImpl.html
@@ -26,11 +26,11 @@
             </div>
         </form>
     </div>
-    <div class="row">
+    <div class="row" style="width: 200px;">
         <p style="font-weight: bold;">Task expiration definition
             <a href="#" data-toggle="tooltip" data-placement="top" title="This time definition determines when notification will occur"><span class="glyphicon glyphicon-info-sign"></span></a>
         </p>
-        <div data-field="taskExpiration" id="taskExpiration" style="width: 200px;"></div>
+        <div data-field="taskExpiration" id="taskExpiration"></div>
     </div>
     <div data-field="timeperiodDiv">
         <div class="row">
