--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/notificationsEditor/widget/NotificationEditorWidgetViewImpl.html
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/notificationsEditor/widget/NotificationEditorWidgetViewImpl.html
@@ -19,10 +19,10 @@
         <p style="font-weight: bold;">Task state type</p>
         <form>
             <div>
-                <label><input type="radio" data-field="notStartedInput" checked name="optradio" checked>Not started (Ready or reserved)</label>
+                <label><input type="radio" data-field="notStartedInput" name="optradio" checked>Not started (Ready or reserved)</label>
             </div>
             <div>
-                <label><input type="radio" name="optradio">Not completed (In progress)</label>
+                <label><input type="radio" data-field="notCompletedInput" name="optradio">Not completed (In progress)</label>
             </div>
         </form>
     </div>
