JBPM-8292: SLA due date property is missing check formatting

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/slaEditor/SLASettingsFieldEditorView.html
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/slaEditor/SLASettingsFieldEditorView.html
@@ -1,11 +1,13 @@
 <div id="slaConfigurationWidget">
+    <div class="form-group" data-field="slaInputFormGroup">
+
     <div class="col-md-12">
 
         <div class="row">
             <div class="col-md-12">
                 <div class="row">
                     <div class="col-md-12">
-                        <label class="sla-inline radio-inline-option"><span data-i18n-key="TimeDuration">SLA</span></label>
+                        <label class="sla-inline sla-inline-option"><span data-i18n-key="TimeDuration">SLA</span></label>
                         <a data-field="sla-duration-timer-help" role="button" data-toggle="popover" data-trigger="hover"
                            data-html="true" title="" data-placement="bottom" data-container="body">
                             <i class="fa fa-info-circle"></i>
@@ -21,6 +23,7 @@
             </div>
         </div>
 
-
+        <span data-field="slaInputHelpBlock" class="help-block"></span>
+    </div>
     </div>
 </div>
