--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/reassignmentsEditor/widget/ReassignmentEditorWidgetViewImpl.html
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/reassignmentsEditor/widget/ReassignmentEditorWidgetViewImpl.html
@@ -37,7 +37,10 @@
             </div>
         </div>
 
-        <div data-field="periodBox"></div>
+        <div class="form-group row form-inline" >
+            <label style="width: 120px;" class="col-sm-2 col-form-label">Period</label>
+            <div data-field="periodBox" style="width: 240px;"></div>
+        </div>
         <div class="text-right">
             <button data-i18n-key="reassignment.close" type="button" data-field="closeButton" class="btn btn-default"></button>
             <button data-i18n-key="reassignment.save" type="button" data-field="saveButton" class="btn btn-primary"></button>
