Work in progress: Extensions handling..

--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-runtime/src/main/webapp/index.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-runtime/src/main/webapp/index.html
@@ -27,6 +27,7 @@
     <script type="text/javascript"  src="model/DI.js"></script>
     <script type="text/javascript"  src="model/DMNDI12.js"></script>
     <script type="text/javascript"  src="model/DMN12.js"></script>
+    <script type="text/javascript"  src="model/KIE.js"></script>
     <script type="text/javascript"  src="model/MainJs.js"></script>
 
 </head>
