--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-runtime/src/main/webapp/index.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-runtime/src/main/webapp/index.html
@@ -40,6 +40,7 @@
 <script src="org.kie.workbench.common.dmn.showcase.DMNKogitoRuntimeWebapp/ace/ace.js" type="text/javascript" charset="utf-8"></script>
 <!-- Get .js files for any needed ACE modes and themes -->
 <script src="org.kie.workbench.common.dmn.showcase.DMNKogitoRuntimeWebapp/ace/theme-chrome.js" type="text/javascript" charset="utf-8"></script>
+<script src="org.kie.workbench.common.dmn.showcase.DMNKogitoRuntimeWebapp/ace/mode-xml.js" type="text/javascript" charset="utf-8"></script>
 
 </body>
 </html>
