Remove backend AppFormer dependencies from kie-wb-common-webapp-kogito-xxx. Part 2.

--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-runtime/src/main/webapp/index.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-runtime/src/main/webapp/index.html
@@ -22,16 +22,19 @@
     <title>DMN Editor Showcase</title>
     <link rel="stylesheet" href="org.kie.workbench.common.dmn.showcase.DMNKogitoRuntimeWebapp/css/patternfly.min.css">
 
-    <script type="text/javascript"  src="model/Jsonix-all.js"></script>
-    <script type="text/javascript"  src="model/DC.js"></script>
-    <script type="text/javascript"  src="model/DI.js"></script>
-    <script type="text/javascript"  src="model/DMNDI12.js"></script>
-    <script type="text/javascript"  src="model/DMN12.js"></script>
-    <script type="text/javascript"  src="model/KIE.js"></script>
-    <script type="text/javascript"  src="model/MainJs.js"></script>
+    <script type="text/javascript" src="model/Jsonix-all.js"></script>
+    <script type="text/javascript" src="model/DC.js"></script>
+    <script type="text/javascript" src="model/DI.js"></script>
+    <script type="text/javascript" src="model/DMNDI12.js"></script>
+    <script type="text/javascript" src="model/DMN12.js"></script>
+    <script type="text/javascript" src="model/KIE.js"></script>
+    <script type="text/javascript" src="model/MainJs.js"></script>
 
 </head>
 <body>
+<script>
+    erraiBusRemoteCommunicationEnabled = false;
+</script>
 <iframe id="__gwt_historyFrame" style="width: 0; height: 0; border: 0"></iframe>
 <!-- loading indicator. the js app hides this once it's loaded. -->
 <!-- The GWT js file generated at run time -->
