DROOLS-4599: [DMN Designer] Decision Tables: Hit Policy select drop-down remains visible if popover closed

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/expressions/types/dtable/hitpolicy/HitPolicyPopoverViewImpl.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/expressions/types/dtable/hitpolicy/HitPolicyPopoverViewImpl.html
@@ -20,7 +20,7 @@
             <form id="#HitPolicyForm">
                 <label for="kieHitPolicy"><span data-field="hitPolicyLabel"></span></label>
                 <div id="kieHitPolicy">
-                    <div data-container="body" data-field="lstHitPolicies"></div>
+                    <div data-field="lstHitPolicies"></div>
                 </div>
                 <br/>
                 <label for="kieBuiltinAggregator"><span data-field="builtinAggregatorLabel"></span></label>
