Removing _data-container=body_ from HitPolicyPopoverViewImpl.html##L28

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/expressions/types/dtable/hitpolicy/HitPolicyPopoverViewImpl.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/expressions/types/dtable/hitpolicy/HitPolicyPopoverViewImpl.html
@@ -25,7 +25,7 @@
                 <br/>
                 <label for="kieBuiltinAggregator"><span data-field="builtinAggregatorLabel"></span></label>
                 <div id="kieBuiltinAggregator">
-                    <div data-container="body" data-field="lstBuiltinAggregator"></div>
+                    <div data-field="lstBuiltinAggregator"></div>
                 </div>
             </form>
         </div>
