less and dataobject

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/imported/ImportDataObjectModalView.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/imported/ImportDataObjectModalView.html
@@ -16,10 +16,10 @@
 <div>
     <div data-field="view">
         <div data-field="header" data-i18n-key="Header"></div>
-        <div data-field="body">
+        <div data-field="body" class="kie-import-data-object-modal-view-body">
             <div data-field="top-elements-container">
                 <span data-i18n-key="ProjectDataObjects"></span>
-                <div style="float: right"><a data-field="clear-selection" href="#" data-i18n-key="ClearSelection"></a></div>
+                <div><a data-field="clear-selection" href="#" data-i18n-key="ClearSelection"></a></div>
             </div>
             <div data-field="items-container" id="data-object-items-container"></div>
             <div data-field="note-container" class="row">
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div data-field="footer">
-            <div class="import-data-modal-footer">
+            <div class="kie-import-data-object-modal-view-footer">
                 <button data-field="button-cancel" class="btn btn-sm btn-default" data-i18n-key="Cancel"></button>
                 <button data-field="button-import" class="btn btn-sm btn-primary" data-i18n-key="Import"></button>
             </div>
