--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/imported/treelist/TreeListSubItemView.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/imported/treelist/TreeListSubItemView.html
@@ -15,5 +15,5 @@
   -->
 
 <div class="sub-item-details">
-    <span data-field="description" style="font-weight: 600">Name</span> <span data-field="details">[type]</span>
+    <span data-field="description">Name</span> <span data-field="details">[type]</span>
 </div>
