--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/imported/treelist/TreeListItemView.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/imported/treelist/TreeListItemView.html
@@ -13,7 +13,7 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<div>
+<div data-field="item-root">
     <div data-field="item-container">
         <div data-field="item-header" class="row">
             <div data-field="expand-container" class="list-view-pf-expand col-md-1">
