--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/common/messages/FlashMessagesView.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/common/messages/FlashMessagesView.html
@@ -16,7 +16,7 @@
 
 <div>
     <div data-field="success-container" class="alert alert-success">
-        <i class="pf pficon-ok"></i>
+        <i class="pficon pficon-ok"></i>
         <strong data-field="strong-success-message"></strong>
         <span data-field="regular-success-message"></span>
         <div class="action-buttons">
