[AF-2366] Final adjusts.

--- a/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-client/src/main/java/org/kie/workbench/common/screens/archetype/mgmt/client/modal/AddArchetypeModalView.html
+++ b/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-client/src/main/java/org/kie/workbench/common/screens/archetype/mgmt/client/modal/AddArchetypeModalView.html
@@ -15,23 +15,23 @@
   -->
 
 <div data-field="content">
-    <div data-field="error" class="alert alert-danger">
+    <div class="alert alert-danger" data-field="error">
         <span class="pficon pficon-error-circle-o"></span>
         <span data-field="error-message"></span>
     </div>
-    <div data-field="archetype-group-id-group" class="form-group">
+    <div class="form-group" data-field="archetype-group-id-group">
         <label class="form-control-label required" data-i18n-key="GroupId"></label>
-        <input type="text" class="form-control" data-field="archetype-group-id"/>
+        <input class="form-control" data-field="archetype-group-id" type="text"/>
         <div class="help-block" data-field="archetype-group-id-help-block"></div>
     </div>
-    <div data-field="archetype-artifact-id-group" class="form-group">
+    <div class="form-group" data-field="archetype-artifact-id-group">
         <label class="form-control-label required" data-i18n-key="ArtifactId"></label>
-        <input type="text" class="form-control" data-field="archetype-artifact-id"/>
+        <input class="form-control" data-field="archetype-artifact-id" type="text"/>
         <div class="help-block" data-field="archetype-artifact-id-help-block"></div>
     </div>
-    <div data-field="archetype-version-group" class="form-group">
+    <div class="form-group" data-field="archetype-version-group">
         <label class="form-control-label required" data-i18n-key="Version"></label>
-        <input type="text" class="form-control" data-field="archetype-version"/>
+        <input class="form-control" data-field="archetype-version" type="text"/>
         <div class="help-block" data-field="archetype-version-help-block"></div>
     </div>
 </div>
