--- a/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-client/src/main/java/org/kie/workbench/common/screens/archetype/mgmt/client/screens/ArchetypeManagementScreenView.html
+++ b/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-client/src/main/java/org/kie/workbench/common/screens/archetype/mgmt/client/screens/ArchetypeManagementScreenView.html
@@ -16,6 +16,6 @@
 
 <div class="archetype-management-container">
     <div class="container">
-        <div data-field="content" class="content"></div>
+        <div class="content" data-field="content"></div>
     </div>
 </div>
