--- a/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-client/src/main/java/org/kie/workbench/common/screens/archetype/mgmt/client/table/ArchetypeTableView.html
+++ b/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-client/src/main/java/org/kie/workbench/common/screens/archetype/mgmt/client/table/ArchetypeTableView.html
@@ -14,11 +14,11 @@
   ~ limitations under the License.
   -->
 
-<div data-field="table-container" class="archetype-table">
+<div class="archetype-table" data-field="table-container">
     <div class="toolbar-pf" data-field="table-toolbar-container">
         <div class="toolbar-pf-actions">
             <div class="form-group toolbar-pf-filter has-clear search-bar">
-                <input class="form-control" data-i18n-key="Search" type="search" data-field="search-input">
+                <input class="form-control" data-field="search-input" data-i18n-key="Search" type="search">
             </div>
             <div class="toolbar-pf-action-right">
                 <div class="form-group right-toolbar">
@@ -34,55 +34,55 @@
         <caption hidden></caption>
         <thead>
         <tr class="kie-tablelist__row kie-tablelist__row--header">
-            <th id="archetype-header-include"
-                class="kie-tablelist__cell kie-tablelist__cell--header"
-                data-field="archetype-column-include">
+            <th class="kie-tablelist__cell kie-tablelist__cell--header"
+                data-field="archetype-column-include"
+                id="archetype-header-include">
                 <span data-i18n-key="Include"></span>
-                <a href="#" data-toggle="tooltip" data-delay="0">
-                    <span data-field="include-tooltip" class="fa fa-info-circle"></span>
+                <a data-delay="0" data-toggle="tooltip" href="#">
+                    <span class="fa fa-info-circle" data-field="include-tooltip"></span>
                 </a>
             </th>
-            <th id="archetype-header-groupd-id"
-                class="kie-tablelist__cell kie-tablelist__cell--header">
+            <th class="kie-tablelist__cell kie-tablelist__cell--header"
+                id="archetype-header-groupd-id">
                 <span data-i18n-key="ArchetypeGroupId"></span>
-                <a href="#" data-toggle="tooltip" data-delay="0">
-                    <span data-field="group-id-tooltip" class="fa fa-info-circle"></span>
+                <a data-delay="0" data-toggle="tooltip" href="#">
+                    <span class="fa fa-info-circle" data-field="group-id-tooltip"></span>
                 </a>
             </th>
-            <th id="archetype-header-artifact-id"
-                class="kie-tablelist__cell kie-tablelist__cell--header">
+            <th class="kie-tablelist__cell kie-tablelist__cell--header"
+                id="archetype-header-artifact-id">
                 <span data-i18n-key="ArchetypeArtifactId"></span>
-                <a href="#" data-toggle="tooltip" data-delay="0">
-                    <span data-field="artifact-id-tooltip" class="fa fa-info-circle"></span>
+                <a data-delay="0" data-toggle="tooltip" href="#">
+                    <span class="fa fa-info-circle" data-field="artifact-id-tooltip"></span>
                 </a>
             </th>
-            <th id="archetype-header-version"
-                class="kie-tablelist__cell kie-tablelist__cell--header">
+            <th class="kie-tablelist__cell kie-tablelist__cell--header"
+                id="archetype-header-version">
                 <span data-i18n-key="ArchetypeVersion"></span>
-                <a href="#" data-toggle="tooltip" data-delay="0">
-                    <span data-field="version-tooltip" class="fa fa-info-circle"></span>
+                <a data-delay="0" data-toggle="tooltip" href="#">
+                    <span class="fa fa-info-circle" data-field="version-tooltip"></span>
                 </a>
             </th>
-            <th id="archetype-header-created-date"
-                class="kie-tablelist__cell kie-tablelist__cell--header">
+            <th class="kie-tablelist__cell kie-tablelist__cell--header"
+                id="archetype-header-created-date">
                 <span data-i18n-key="CreatedDate"></span>
-                <a href="#" data-toggle="tooltip" data-delay="0">
-                    <span data-field="created-date-tooltip" class="fa fa-info-circle"></span>
+                <a data-delay="0" data-toggle="tooltip" href="#">
+                    <span class="fa fa-info-circle" data-field="created-date-tooltip"></span>
                 </a>
             </th>
-            <th id="archetype-header-status"
-                class="kie-tablelist__cell kie-tablelist__cell--header"
-                data-field="archetype-column-status">
+            <th class="kie-tablelist__cell kie-tablelist__cell--header"
+                data-field="archetype-column-status"
+                id="archetype-header-status">
                 <span data-i18n-key="Status"></span>
-                <a href="#" data-toggle="tooltip" data-delay="0">
-                    <span data-field="status-tooltip" class="fa fa-info-circle"></span>
+                <a data-delay="0" data-toggle="tooltip" href="#">
+                    <span class="fa fa-info-circle" data-field="status-tooltip"></span>
                 </a>
             </th>
-            <th id="archetype-header-actions"
-                class="kie-tablelist__cell kie-tablelist__cell--header kie-tablelist__cell--actions">
+            <th class="kie-tablelist__cell kie-tablelist__cell--header kie-tablelist__cell--actions"
+                id="archetype-header-actions">
                 <span data-i18n-key="Actions"></span>
-                <a href="#" data-toggle="tooltip" data-delay="0">
-                    <span data-field="actions-tooltip" class="fa fa-info-circle"></span>
+                <a data-delay="0" data-toggle="tooltip" href="#">
+                    <span class="fa fa-info-circle" data-field="actions-tooltip"></span>
                 </a>
             </th>
         </tr>
