--- a/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-client/src/main/java/org/kie/workbench/common/screens/archetype/mgmt/client/table/item/ArchetypeItemView.html
+++ b/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-client/src/main/java/org/kie/workbench/common/screens/archetype/mgmt/client/table/item/ArchetypeItemView.html
@@ -16,7 +16,9 @@
 
 <table class="archetype-item">
     <caption hidden></caption>
-    <thead><th scope="row"></th></thead>
+    <thead>
+    <th scope="row"></th>
+    </thead>
     <tbody>
     <tr class="kie-tablelist__row archetype-row-item" data-field="archetype-item-root">
         <td class="kie-tablelist__cell" data-field="cell-include">
@@ -37,20 +39,20 @@
         <td class="kie-tablelist__cell" data-field="cell-status">
             <div class="all-status">
                 <div data-field="status-valid"
-                     data-toggle="tooltip"
                      data-placement="bottom"
+                     data-toggle="tooltip"
                      hidden>
                     <span class="label label-success"><em class="fa fa-check"></em></span>
                 </div>
                 <div data-field="status-invalid"
-                     data-toggle="tooltip"
                      data-placement="bottom"
+                     data-toggle="tooltip"
                      hidden>
                     <span class="label label-danger"><em class="pficon pficon-close"></em></span>
                 </div>
                 <div data-field="default-badge"
-                     data-toggle="tooltip"
                      data-placement="bottom"
+                     data-toggle="tooltip"
                      hidden>
                     <span class="label label-info default-badge" data-i18n-key="Default"></span>
                 </div>
@@ -58,15 +60,15 @@
         </td>
         <td class="kie-tablelist__cell kie-tablelist__cell--actions" data-field="cell-kebab-actions">
             <div class="dropdown dropdown-kebab-pf">
-                <button class="btn btn-link dropdown-toggle"
-                        type="button"
-                        id="dropdownKebab"
-                        data-toggle="dropdown"
+                <button aria-expanded="false"
                         aria-haspopup="true"
-                        aria-expanded="false">
+                        class="btn btn-link dropdown-toggle"
+                        data-toggle="dropdown"
+                        id="dropdownKebab"
+                        type="button">
                     <span class="fa fa-ellipsis-v"></span>
                 </button>
-                <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownKebab">
+                <ul aria-labelledby="dropdownKebab" class="dropdown-menu dropdown-menu-right">
                     <li data-field="actions-delete"><a data-i18n-key="Delete" href="#"></a></li>
                     <li data-field="actions-validate"><a data-i18n-key="Validate" href="#"></a></li>
                     <li data-field="actions-set-as-default"><a data-i18n-key="SetAsDefault" href="#"></a></li>
