[AF-2366] Fixing i18n strings.

--- a/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-client/src/main/java/org/kie/workbench/common/screens/archetype/mgmt/client/modal/AddArchetypeModalView.html
+++ b/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-client/src/main/java/org/kie/workbench/common/screens/archetype/mgmt/client/modal/AddArchetypeModalView.html
@@ -20,17 +20,17 @@
         <span data-field="error-message"></span>
     </div>
     <div class="form-group" data-field="archetype-group-id-group">
-        <label class="form-control-label required" data-i18n-key="GroupId"></label>
+        <label class="form-control-label required" data-i18n-key="ArchetypeGroupId"></label>
         <input class="form-control" data-field="archetype-group-id" type="text"/>
         <div class="help-block" data-field="archetype-group-id-help-block"></div>
     </div>
     <div class="form-group" data-field="archetype-artifact-id-group">
-        <label class="form-control-label required" data-i18n-key="ArtifactId"></label>
+        <label class="form-control-label required" data-i18n-key="ArchetypeArtifactId"></label>
         <input class="form-control" data-field="archetype-artifact-id" type="text"/>
         <div class="help-block" data-field="archetype-artifact-id-help-block"></div>
     </div>
     <div class="form-group" data-field="archetype-version-group">
-        <label class="form-control-label required" data-i18n-key="Version"></label>
+        <label class="form-control-label required" data-i18n-key="ArchetypeVersion"></label>
         <input class="form-control" data-field="archetype-version" type="text"/>
         <div class="help-block" data-field="archetype-version-help-block"></div>
     </div>
