--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/assignmentsEditor/ActivityDataIOEditorWidget.html
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/assignmentsEditor/ActivityDataIOEditorWidget.html
@@ -52,7 +52,7 @@
                                 Data Type
                             </th>
                             <th data-field="processvarorexpressionth">
-                                Process Var or Expression
+                                <p data-field="pop-up" style="display: inline">Process Var or Expression</p>
                                 <a data-field="source-target" role="button" data-toggle="popover" data-trigger="hover"
                                    data-html="true" title="" data-placement="bottom" data-container="body">
                                     <i class="fa fa-info-circle"></i>
