--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/variablesEditor/VariablesEditorWidget.html
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/variablesEditor/VariablesEditorWidget.html
@@ -16,7 +16,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
 </head>
+
 
 <body>
 
@@ -30,15 +32,20 @@
                     <table class="table table-striped table-bordered" data-field="table">
                         <thead>
                         <tr>
-                            <th data-field="nameth" style="width:46%">
+                            <th data-field="nameth" style="width:32%">
                                 Name
                             </th>
-                            <th data-field="datatypeth" style="width:46%">
+                            <th data-field="datatypeth" style="width:40%">
                                 Data Type
                             </th>
 
                             <th data-field="kpith" style="width:4%">
                                 KPI
+                            </th>
+
+                            <th style="width:20%">
+                                Tags
+                                <i class="fa fa-info-circle" title = "Variable Tags Info Go Here"/>
                             </th>
 
                             <td style="width:4%">
@@ -48,10 +55,10 @@
                         </thead>
                         <tbody id="variableRows">
                         <tr id="variableRow">
-                            <td style="width:46%">
+                            <td style="width:32%">
                                 <input type="text" class="form-control" data-field="name"/>
                             </td>
-                            <td style="width:46%">
+                            <td style="width:40%">
                                 <select data-field="dataType" class="form-control">
                                     <option value="Integer">Integer</option>
                                     <option value="String">String</option>
@@ -59,11 +66,33 @@
                                 <input type="text" class="form-control" data-field="customDataType"/>
                             </td>
 
-                            <td style="width:4%">
-                                <input type="checkbox" class="center-block" data-field="kpi"/>
+                            <td style="width:4%" data-field="kpiTD">
+                                <input type="checkbox" style="margin-left:15px; margin-top:10px" data-field="kpi"/>
                             </td>
 
-                            <td style="width:4%" data-field="kpiTD">
+                            <td style="width:20%">
+                                <div class = "containerDiv">
+                                    <a class = "tagAnchor tagsSVG" data-field="variable-tags-settings" data-placement="bottom" data-toggle="popover" data-html="true" data-content="Something Before <button>Sample Pop Over Text</button> Something After">
+                                        <span id = "tagCount" class = "tagSpan">4</span>
+                                    </a>
+                                </div>
+
+                                <div data-field = "tags-div" style = "display: none; ">
+
+                                    <button type="button" class ="close" data-field="closeButton">x</button>
+
+                                    Variable tags                                      .
+
+                                    <input type="checkbox" class="center-block" data-field="some-check"/>
+
+                                    <input type="checkbox" class="center-block" />
+
+                                    <input type="checkbox" class="center-block" />
+
+                                </div>
+                            </td>
+
+                            <td style="width:4%">
                                 <button type="button" class="center-block" data-field="deleteButton"></button>
                             </td>
                         </tr>
@@ -76,4 +105,5 @@
 
 </div>
 </body>
+
 </html>
