--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/variablesEditor/VariablesEditorWidget.html
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/variablesEditor/VariablesEditorWidget.html
@@ -39,11 +39,7 @@
                                 Data Type
                             </th>
 
-                            <th data-field="kpith" style="width:4%">
-                                KPI
-                            </th>
-
-                            <th style="width:20%">
+                            <th style="width:24%" data-field="tagsth">
                                 Tags
                                 <i class="fa fa-info-circle" title = "Variable Tags Info Go Here"/>
                             </th>
@@ -66,11 +62,7 @@
                                 <input type="text" class="form-control" data-field="customDataType"/>
                             </td>
 
-                            <td style="width:4%" data-field="kpiTD">
-                                <input type="checkbox" style="margin-left:15px; margin-top:10px" data-field="kpi"/>
-                            </td>
-
-                            <td style="width:20%">
+                            <td style="width:24%" data-field="tagsTD">
                                 <div class = "containerDiv">
                                     <a class = "tagAnchor tagsSVG" data-field="variable-tags-settings" data-placement="bottom" data-toggle="popover" data-html="true" data-content="Something Before <button>Sample Pop Over Text</button> Something After">
                                         <span id = "tagCount" class = "tagSpan">4</span>
