--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/variablesEditor/VariablesEditorWidget.html
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/variablesEditor/VariablesEditorWidget.html
@@ -66,24 +66,34 @@
                                 <div class = "containerDiv" title = "These are the tags included 3">
                                     <a class = "tagAnchor tagsSVG" data-field="variable-tags-settings" data-placement="bottom" data-toggle="popover" data-html="true" data-content="S">
                                         <span data-field ="tagCount"  title = "These are the tags included " class = "tagSpan">4</span>
+
                                     </a>
                                 </div>
 
-                                <div data-field = "tags-div" style = "width: 250px; display: none; ">
+                                <div data-field = "tags-div" class = "tagsDiv">
 
                                     <button type="button" class ="close" data-field="closeButton">x</button>
 
-                                    Variable tags     Information                                 .
+                                    <h3>Variable tags</h3>
 
-                                    <select data-field="defaultClassNames" class="form-control"/>
-                                    <input class="form-control" data-field="customClassName" type="text"/>
+                                    <select data-field="defaultTagNames" class="form-control selectionWidget" style = "width: 150px;"/>
+                                    <input class="form-control selectionWidget" data-field="customTagName" style = "width: 150px;" type="text"/>
 
+                                    &nbsp;
+                                    &nbsp;
 
+                                    <span class="glyphicon glyphicon-ok check-mark acceptButton" title = "Add Tag" data-field="acceptButton" ></span>
+
+                                    <br>
+                                    <br>
                                     <input type="checkbox" class="center-block" data-field="some-check"/>
 
                                     <input type="checkbox" class="center-block" />
 
                                     <input type="checkbox" class="center-block" />
+                                    <div data-field="tagsContainer">
+
+                                    </div>
 
                                 </div>
                             </td>
