KOGITO-1020 : UI Done

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/variablesEditor/VariablesEditorWidget.html
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/variablesEditor/VariablesEditorWidget.html
@@ -65,8 +65,7 @@
                             <td style="width:22%" data-field="tagsTD" title = "These are the tags included 2" >
                                 <div class = "containerDiv" title = "These are the tags included 3">
                                     <a class = "tagAnchor tagsSVG" data-field="variable-tags-settings" data-placement="bottom" data-toggle="popover" data-html="true" data-content="S">
-                                        <span data-field ="tagCount"  title = "These are the tags included " class = "tagSpan">4</span>
-
+                                        <span data-field ="tagCount"  title = "These are the tags included " class = "tagSpan"></span>
                                     </a>
                                 </div>
 
@@ -79,20 +78,9 @@
                                     <select data-field="defaultTagNames" class="form-control selectionWidget" style = "width: 150px;"/>
                                     <input class="form-control selectionWidget" data-field="customTagName" style = "width: 150px;" type="text"/>
 
-                                    &nbsp;
-                                    &nbsp;
-
                                     <span class="glyphicon glyphicon-ok check-mark acceptButton" title = "Add Tag" data-field="acceptButton" ></span>
-
-                                    <br>
-                                    <br>
-                                    <input type="checkbox" class="center-block" data-field="some-check"/>
-
-                                    <input type="checkbox" class="center-block" />
-
-                                    <input type="checkbox" class="center-block" />
+                                    <br><br><br>
                                     <div data-field="tagsContainer">
-
                                     </div>
 
                                 </div>
