KOGITO-1020 : Fixed issues with overlay floating, overlaps not closing previous overlays and saving internal model of tags

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/variablesEditor/VariablesEditorWidget.html
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/variablesEditor/VariablesEditorWidget.html
@@ -62,14 +62,14 @@
                                 <input type="text" class="form-control" data-field="customDataType"/>
                             </td>
 
-                            <td style="width:22%" data-field="tagsTD" title = "These are the tags included 2" >
-                                <div class = "containerDiv" title = "These are the tags included 3">
-                                    <a class = "tagAnchor tagsSVG" data-field="variable-tags-settings" data-placement="bottom" data-toggle="popover" data-html="true" data-content="S">
+                            <td style="width:22%" data-field="tagsTD">
+                                <div class = "containerDiv" title = "Tags">
+                                    <a class = "tagAnchor tagsSVG" data-field="variable-tags-settings" data-dismiss="onblur" data-placement="bottom" data-toggle="popover" data-html="true" data-content="OverlayContent">
                                         <span data-field ="tagCount"  title = "These are the tags included " class = "tagSpan"></span>
                                     </a>
                                 </div>
 
-                                <div data-field = "tags-div" class = "tagsDiv">
+                                <div style="display:none;"   data-field = "tags-div" class = "tagsDiv">
 
                                     <button type="button" class ="close" data-field="closeButton">x</button>
 
