KOGITO-1020 : Modified Model / Marshallers Last Pass

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/variablesEditor/VariablesEditorWidget.html
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/variablesEditor/VariablesEditorWidget.html
@@ -41,7 +41,7 @@
 
                             <th style="width:22%" data-field="tagsth">
                                 Tags
-                                <i class="fa fa-info-circle" title = "Variable Tags Info Go Here"/>
+                                <i class="fa fa-info-circle" title = "Add Predefined or Custom Tags to Variables"/>
                             </th>
 
                             <td style="width:3%">
