Updates following peer review. Add support for closing Popovers with the keyboard.

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/widgets/grid/controls/list/ListSelectorViewImpl.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/widgets/grid/controls/list/ListSelectorViewImpl.html
@@ -18,6 +18,6 @@
 <div>
     <div id="dropdown" class="dropdown">
         <button id="dropdown-trigger" data-toggle="dropdown"></button>
-        <ul data-field="items-container" class="dropdown-menu"></ul>
+        <ul id="dropdown-menu" data-field="items-container" class="dropdown-menu"></ul>
     </div>
 </div>
