KOGITO-204: Introduce OUIA attributes to unify kogito integration tests
For more details see: https://issues.redhat.com/browse/KOGITO-204

--- a/kie-wb-common-stunner/kie-wb-common-stunner-extensions/kie-wb-common-stunner-kogito/kie-wb-common-stunner-kogito-client/src/main/java/org/kie/workbench/common/stunner/kogito/client/screens/DiagramEditorExplorerScreenView.html
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-extensions/kie-wb-common-stunner-kogito/kie-wb-common-stunner-kogito-client/src/main/java/org/kie/workbench/common/stunner/kogito/client/screens/DiagramEditorExplorerScreenView.html
@@ -31,7 +31,7 @@
                 <div class="panel-heading">
                     <h3 class="panel-title">Explorer</h3>
                 </div>
-                <div data-field="explorerPanelBody" class="preview-panels, panel-body">
+                <div data-field="explorerPanelBody" data-ouia-component-id="diagram-tree-explorer" class="preview-panels, panel-body">
                 </div>
             </div>
         </td>
