--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/artifacts/DataObjectTypeWidget.html
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/artifacts/DataObjectTypeWidget.html
@@ -1,3 +1,7 @@
 <div>
-    <div data-field="select"></div>
+    <select data-field="dataType" class="form-control">
+        <option value="Integer">Integer</option>
+        <option value="String">String</option>
+    </select>
+    <input type="text" class="form-control" data-field="customDataType"/>
 </div>
