Fix issue 4, 5, 6 and 8 - Now DMN tutorial has improved messages, and refined interaction

--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-common/src/main/java/org/kie/workbench/common/dmn/webapp/kogito/common/client/tour/tutorial/DMNTutorialView.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-common/src/main/java/org/kie/workbench/common/dmn/webapp/kogito/common/client/tour/tutorial/DMNTutorialView.html
@@ -74,7 +74,7 @@
             <h3 class="pf-c-title pf-m-xl">Edit nodes properties</h3>
             <p data-pf-content="true">Excellent!</p>
             <p data-pf-content="true">
-                You can also define other properties on our nodes. Open the properties
+                You can also define other properties on our nodes. Toggle the properties
                 panel by clicking on the pencil icon.
             </p>
         </div>
@@ -124,7 +124,7 @@
                     learn-dmn-in-15-minutes.com/learn/decision-logic
                 </a>.
             </p>
-            <p data-pf-content="true">Now, let's go back to our canvas by clicking on <i>Back to new-file</i>!</p>
+            <p data-pf-content="true">Now, let's go back to our canvas by clicking on this link!</p>
         </div>
     </div>
 </div>
