Adding icon support to list selector header item

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/widgets/grid/controls/list/ListSelectorHeaderItemViewImpl.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/widgets/grid/controls/list/ListSelectorHeaderItemViewImpl.html
@@ -13,4 +13,4 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<li class="dropdown-header"><span data-field="text"></span></li>
+<li class="dropdown-header"><i data-field="icon"></i><span data-field="text"></span></li>
